Added some improvements to the Cache code.